--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ layout: home
 title: Home
 subtitle: This is where I overshare
 ---
+
+Hi, welcome to my Website. This houses any Personal as well as Professional Content relating to me.
