--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ title: Home
 subtitle: This is where I overshare
 ---
 
-Hi, welcome to my Website. This houses any Personal as well as Professional Content relating to me.
+Hi, welcome to my Website. This houses any personal as well as professional content relating to me.
