--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@ title: Home
 subtitle: This is where I overshare
 ---
 
-Hi, welcome to my Website. This houses any personal as well as professional content relating to me.
+Hey there! I am Suraj Samaga. I am currently in my senior year at the [Department of Electrical Engineering](https://www.ee.iitb.ac.in/web) at IIT Bombay, India.
+
+This website houses any personal as well as professional content relating to me. 
