--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 subtitle: This is where I overshare
 ---
 
-Hey there! I am Suraj Samaga. I am currently in my senior year at the [Department of Electrical Engineering](https://www.ee.iitb.ac.in/web) at IIT Bombay, India.
+Hey there! I am Suraj Samaga. I am currently in my senior year at the <a href="https://www.ee.iitb.ac.in/web">Department of Electrical Engineering</a> at IIT Bombay, India.
 
 This website houses any personal as well as professional content relating to me. 
