--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ Hey there! I am Suraj Samaga. I am currently in my senior year at the <a href="h
 
 This website houses any personal as well as professional content relating to me.<br>
 My academic summary can be found in my <a href="/assets/iitb/suraj_grad_cv.pdf">CV</a>.<br>
-The <a href="courses">Courses</a> section houses a list of courses that I have credited, along with my reviews for a few of them.
+The <a href="courses">Courses</a> section houses a list of courses that I have credited at IITB, along with my reviews for a few of them.
