--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 subtitle: This is where I overshare
 ---
 
-Hey there! I am Suraj Samaga. I am currently in my senior year at the <a href="https://www.ee.iitb.ac.in/web">Department of Electrical Engineering</a> at IIT Bombay, India.
+Hey there! I am Suraj Samaga. I am a grad student in the EE department at Caltech. I did my undergrad in EE at IIT Bombay.
 
 This website houses any personal as well as professional content relating to me.<br>
 My academic summary can be found in my <a href="/assets/iitb/suraj_grad_cv.pdf">CV</a>.<br>
